# web-fetch-mcp

./: .gitignore  NOTICE  README.md  TODO.md  pyproject.toml  server.py
.github/workflows/: ci.yml  publish.yml
assets/: benchmarks.md
src/web_fetch_mcp/: __init__.py
src/web_fetch_mcp/accessor/: __init__.py  browser.py  dynamic_client.py  static_client.py  stealth_client.py
src/web_fetch_mcp/controller/: __init__.py  app.py
src/web_fetch_mcp/core/: __init__.py  backoff.py  config.py  detection.py  models.py  proxy.py  rendering.py  utils.py
src/web_fetch_mcp/service/: __init__.py  circuit.py  escalation.py  fetcher.py  request.py  retry.py  strategies.py
tests/: test_fetch_enhancements.py
tests/fixtures/: article.html  not_article.html
