[project]
name = "web-fetch-mcp"
version = "0.1.0"
description = "Resilient web-fetch MCP server: 3-tier escalation (curl_cffi -> Patchright -> nodriver) that defeats most anti-bot walls, with article-extraction mode and automatic content-type handling (HTML/JSON/PDF/image)."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "curl-cffi>=0.7.0",
    "patchright>=1.49.0",
    "markdownify>=0.13.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "nodriver>=0.40",
    "trafilatura>=1.8.0",
    "pypdf>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_fetch_mcp"]

[project.scripts]
web-fetch-mcp = "web_fetch_mcp.controller.app:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
